Use a pixbuf cache

https://bugzilla.gnome.org/show_bug.cgi?id=687911